# ready_ds

./: .gitattributes  .gitignore  AtBS_file_writing.py  README.md  backup_to_zip.py  main.py  marimo_tutorial.py  myProgramLog.txt  mydata  pyproject.toml
