[project]
name = "ready-ds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.18.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyzmq>=27.1.0",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
]
